# Codeforces-MCP

./: README.md  main.py  pyproject.toml
interactive-chat-bot/: app.py  client.py  config.json
mcpserver/: Dockerfile  app.py  client-stdio.py
