[project]
name = "kb-mcp-cf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.3.0",
    "mcp[cli]>=1.9.3",
    "nest-asyncio>=1.6.0",
]
